--- a/UI/components/forms/s-table/s-table.component.html
+++ b/UI/components/forms/s-table/s-table.component.html
@@ -11,6 +11,7 @@
     (sortFunction)="onSort($event)"
     [customSort]="true"
     [globalFilterFields]="globalFilterFields"
+    [rowsPerPageOptions]="pageSizeOptions"
     styleClass="p-datatable-striped"
   >
     <ng-template pTemplate="caption">
