--- a/UI/components/forms/s-table/s-table.component.html
+++ b/UI/components/forms/s-table/s-table.component.html
@@ -29,7 +29,11 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+        <th
+          *ngFor="let col of columns"
+          [pSortableColumn]="col.isSortable ? col.field : ''"
+          [ngStyle]="{ 'text-align': col.field === 'favorite' ? 'center' : '' }"
+        >
           <ng-container *ngIf="col.isSortable">
             {{ col.name }}
             <p-sortIcon [field]="col.field"></p-sortIcon>
@@ -38,16 +42,18 @@
             {{ col.name }}
           </ng-container>
         </th>
-        <th *ngIf="showEditColumn"></th>
         <th *ngIf="showDeleteColumn"></th>
         <th *ngIf="showInactiveColumn"></th>
-        <th *ngIf="showViewColumn">Ver</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-data>
       <tr>
         <ng-container *ngFor="let col of columns">
-          <ng-container *ngIf="col.field !== 'satisfaction_level'">
+          <ng-container
+            *ngIf="
+              !['satisfaction_level', 'view', 'favorite'].includes(col.field)
+            "
+          >
             <td *ngIf="col.type === 'html'">
               <app-s-dynamic-content-component
                 [htmlContent]="col.renderHtml"
@@ -66,15 +72,23 @@
               ></p-rating>
             </td>
           </ng-container>
+          <td style="text-align: center" *ngIf="col.field === 'favorite'">
+            <i
+              [class]="
+                'pi ' + (data.favorite === 2 ? 'pi-bookmark-fill' : 'pi-bookmark')
+              "
+              [ngStyle]="{ cursor: 'pointer' }"
+              (click)="onChangeStatusFavorite(data.id_employee)"
+            ></i>
+          </td>
           <td *ngIf="col.field === 'view'">
             <app-s-button
-              [icon]="icon"
+              icon="pi pi-id-card"
               (buttonClick)="onEditButtonClick(data.id_employee)"
             ></app-s-button>
           </td>
         </ng-container>
       </tr>
     </ng-template>
-
   </p-table>
 </div>
